--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e":"webdriver-manager update --standalone false --gecko false",
     "e2e":"protractor",
-    "deploy":"ng build --configuration=production --base-href=/netflix/ && ngh --no-silent"  
+    "deploy":"ng build --configuration=production --base-href=/netflix-clone/ && ngh --no-silent"  
    
   },
   "private": true,
